@@ -60,7 +60,7 @@ Here's a series of substitution definitions:
         Here's a series of substitution definitions:
     <substitution_definition name="symbol 1">
         <image alt="symbol 1" uri="symbol1.png">
-    <substitution_definition name="symbol 2">
+    <substitution_definition name="SYMBOL 2">
         <image alt="SYMBOL 2" height="50" uri="symbol2.png" width="100">
     <substitution_definition name="symbol 3">
         <image alt="symbol 3" uri="symbol3.png">
